--- a/index.html
+++ b/index.html
@@ -1,12 +1,148 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+    <head>
+        <meta charset="utf-8">
+        <title>HTML Academy: Седона</title>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    </head>
 
-  </body>
+<body>
+    <header class="page-header">
+
+        <a href="index.html" class="logo">
+            <img src="img/logo.svg" alt="Логотип.">
+        </a>
+
+        <nav class="navigation">
+            <ul class="navigation-list">
+                <li class="navigation-item">
+                    <a href="index.html" class="navigation-link navigation-link-current">Главная</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="#" class="navigation-link">О Седоне</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="catalog.html" class="navigation-link">Гостиницы</a>
+                </li>
+            </ul>
+
+            <ul class="controls">
+                <li class="controls-item">
+                    <button class="controls-button" type="button"></button>
+                    <span class="visually-hidden">Поиск</span>
+                </li>
+                <li class="controls-item">
+                    <button class="controls-button" type="button"></button>
+                    <span class="visually-hidden">Избранное</span>
+                </li>
+                <li class="controls-item ">
+                   <a class="button controls-link" href="#">Хочу сюда!</a>
+                </li>
+
+            </ul>
+        </nav>
+    </header>
+
+
+    <main class="main-index">
+       <section class="description">
+        <img src="#" alt="Добро пожаловать">
+        <img src="#" alt="Седона. Потому что Гранд-Каньон ацтой">
+        <h1 class="description-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <p class="description-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages-list">
+            <li class="advantages-item">
+                <h3 class="advantages-title">Настоящий городок</h3>
+                <p class="advatages-description">№1 Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+            </li>
+            <li class="advantages-item">
+                <h3 class="advantages-title">Жильё</h3>
+                <p class="advatages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="advantages-item">
+                <h3 class="advantages-title">Еда</h3>
+                <p class="advatages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="advantages-item">
+                <h3 class="advantages-title">Сувениры</h3>
+                <p class="advatages-description">Не только китайского, но и настоящего местного производства!</p>
+            </li>
+            <li class="advantages-item">
+                <h3 class="advantages-title">Там есть мост дьявола</h3>
+                <p class="advatages-description">Да, по нему можно пройти!Если вы осмелитесь, разумеется</p>
+            </li>
+            <li class="advantages-item">
+                <h3 class="advantages-title">Небольшая площадь</h3>
+                <p class="advatages-description">Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="advantages-item">
+                <h3 class="advantages-title">Красивая дорого</h3>
+                <p class="advatages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="advantages-item">
+                <h3 class="advantages-title">Мало туристов</h3>
+                <p class="advatages-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+        </ul>
+      </section>
+
+      <section class="interested">
+
+        <h2 class="interested-title">Заинтересовались?</h2>
+        <p class="interested-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button interested-search" href="catalog.html" >Поиск гостинницы в Седоне</a>
+      </section>
+
+      <section class="subscription">
+        <h2 class="subscripyion-title">Подпишитесь на рассылку</h2>
+        <p class="subscription-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label for="newsletter-email">Email</label>
+            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
+            <input class="button-blue subscribe-button" type="submit" value="Подписаться">
+        </form>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <section class="footer-socials">
+        <h2 class="visually-hidden">Давай дружить</h2>
+        <ul class="footer-socials-list">
+            <li class="footer-socials-item">
+                <a href="https://vk.com/htmlacademy" class="button">
+                <span class="visually-hidden">Вконтакте</span>
+                </a>
+            </li>
+            <li class="footer-socials-item">
+                <a href="https://t.me/htmlacademy " class="button">
+                <span class="visually-hidden">Телеграм</span>
+                </a>
+            </li>
+            <li class="footer-socials-item">
+                <a href="https://www.youtube.com/user/htmlacademyru" class="button">
+                <span class="visually-hidden">Ютуб</span>
+                </a>
+            </li>
+        </ul>
+
+      </section>
+
+      <section class="footer-contacts">
+        <h2 class="visually-hidden">Наш номер телефона</h2>
+        <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </section>
+
+      <section class="footer-author">
+        <h2 class="visually-hidden">Сайт htmlacademy</h2>
+        <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+        <span class="visually-hidden">.htmlacademy</span>
+        </a>
+      </section>
+    </footer>
+</body>
 </html>
+
