--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                 <li class="controls-item ">
                    <a class="button controls-link" href="#">Хочу сюда!</a>
                 </li>
-
             </ul>
         </nav>
     </header>
@@ -60,20 +59,7 @@
                 <p class="advatages-description">№1 Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
             <li class="advantages-item">
-                <h3 class="advantages-title">Жильё</h3>
-                <p class="advatages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-            </li>
-            <li class="advantages-item">
-                <h3 class="advantages-title">Еда</h3>
-                <p class="advatages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-            </li>
-            <li class="advantages-item">
-                <h3 class="advantages-title">Сувениры</h3>
-                <p class="advatages-description">Не только китайского, но и настоящего местного производства!</p>
-            </li>
-            <li class="advantages-item">
-                <h3 class="advantages-title">Там есть мост дьявола</h3>
-                <p class="advatages-description">Да, по нему можно пройти!Если вы осмелитесь, разумеется</p>
+
             </li>
             <li class="advantages-item">
                 <h3 class="advantages-title">Небольшая площадь</h3>
@@ -87,6 +73,28 @@
                 <h3 class="advantages-title">Мало туристов</h3>
                 <p class="advatages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
+            <li class="advantages-item">
+
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Там есть мост дьявола</h3>
+              <p class="advatages-description">Да, по нему можно пройти!Если вы осмелитесь, разумеется</p>
+          </li>
+        </ul>
+
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Жильё</h3>
+            <p class="advatages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Еда</h3>
+            <p class="advatages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Сувениры</h3>
+            <p class="advatages-description">Не только китайского, но и настоящего местного производства!</p>
+          </li>
         </ul>
       </section>
 
@@ -145,4 +153,3 @@
     </footer>
 </body>
 </html>
-
