--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="page-header">
 
         <a href="index.html" class="logo">
-            <img src="img/logo.svg" alt="Логотип.">
+            <img src="img/logo.svg" alt="Логотип сайта Седона">
         </a>
 
         <nav class="navigation">
