--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,7 @@
                     <a href="#" class="navigation-link">О Седоне</a>
                 </li>
                 <li class="navigation-item">
-                    <a href="catalog.html" class="navigation-link navigation-link-current">Гостиницы</a>
+                    <a class="navigation-link navigation-link-current">Гостиницы</a>
                 </li>
             </ul>
 
