--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navigation">
             <ul class="navigation-list">
                 <li class="navigation-item">
-                    <a href="index.html" class="navigation-link navigation-link-current">Главная</a>
+                    <a class="navigation-link navigation-link-current">Главная</a>
                 </li>
                 <li class="navigation-item">
                     <a href="#" class="navigation-link">О Седоне</a>
