Исправляет список ссылок

--- a/catalog.html
+++ b/catalog.html
@@ -27,19 +27,14 @@
 
             <ul class="controls">
                 <li class="controls-item">
-                    <button class="controls-button" type="button"></button>
-                    <span class="visually-hidden">Поиск</span>
+                  <a class="controls-link" href="">Поиск</a>
                 </li>
-
                 <li class="controls-item">
-                    <button class="controls-button" type="button"></button>
-                    <span class="visually-hidden">Избранное</span>
+                  <a class="controls-link" href="">Избранное</a>
                 </li>
-
                 <li class="controls-item ">
                    <a class="button controls-link" href="#">Хочу сюда!</a>
                 </li>
-
             </ul>
         </nav>
     </header>
