--- a/index.html
+++ b/index.html
@@ -27,18 +27,16 @@
             </ul>
 
             <ul class="controls">
-                <li class="controls-item">
-                    <button class="controls-button" type="button"></button>
-                    <span class="visually-hidden">Поиск</span>
-                </li>
-                <li class="controls-item">
-                    <button class="controls-button" type="button"></button>
-                    <span class="visually-hidden">Избранное</span>
-                </li>
-                <li class="controls-item ">
-                   <a class="button controls-link" href="#">Хочу сюда!</a>
-                </li>
-            </ul>
+              <li class="controls-item">
+                <a class="controls-link" href="">Поиск</a>
+              </li>
+              <li class="controls-item">
+                <a class="controls-link" href="">Избранное</a>
+              </li>
+              <li class="controls-item ">
+                 <a class="button controls-link" href="#">Хочу сюда!</a>
+              </li>
+          </ul>
         </nav>
     </header>
 
