--- a/catalog.html
+++ b/catalog.html
@@ -102,8 +102,7 @@
         </section>
 
         <section class="inner-index-hotels">
-            <h2 class="visually-hidden">Список найденных гостинниц</h2>
-            <p>Найдено гостиниц: 38</p>
+            <h2>Найдено гостиниц: 38</h2>
             <select class="control-select" name="select-control" id="select-control" aria-label="Сортировка">
                 <option value="cheap">Сначала дешевые</option>
                 <option value="expensive">Сначала дорогие</option>
