Исправляет кнопки в списке

--- a/catalog.html
+++ b/catalog.html
@@ -111,15 +111,15 @@
 
             <ul class="index-icons-list">
                 <li class="index-icons-item">
-                    <input  class="index-icons-btn" type="button" value="tile">
+                    <button class="index-icons-btn">tile</button>
                     <span class="visually-hidden">Отображение плиткой</span>
                 </li>
                 <li class="index-icons-item">
-                    <input class="index-icons-btn" type="button" value="large-icons">
+                    <button class="index-icons-btn">large-icons</button>
                     <span class="visually-hidden">Отображение крупные значки</span>
                 </li>
                 <li class="index-icons-item">
-                    <input class="index-icons-btn" type="button" value="list">
+                    <button class="index-icons-btn">list</button>
                     <span class="visually-hidden">Отображение списком</span>
                 </li>
             </ul>
