--- a/catalog.html
+++ b/catalog.html
@@ -124,42 +124,42 @@
                 </li>
             </ul>
 
-            <ul class="index-hotels-list">
-                <li class="index-hotels-item">
+            <ul class="hotels-list">
+                <li class="hotels-item">
                   <img src="img/amara_resort.jpg" alt="Ущелье, с красивым звездным небом">
-                  <h3 class="index-hotels-title">Amara Resort & Spa</h3>
-                  <p class="index-hotels-type">Гостиница</p>
-                  <span class="index-hotels-price">От 4000 ₽</span>
+                  <h3 class="hotels-title">Amara Resort & Spa</h3>
+                  <p class="hotels-type">Гостиница</p>
+                  <span class="hotels-price">От 4000 ₽</span>
                   <a href="#">Подробнее</a>
-                  <input class="button-blue index-hotels-button" type="button" value="В избранное">
-                  <span class="index-hotels-rating">Рейтинг: 8,5</span>
+                  <input class="button-blue hotels-button" type="button" value="В избранное">
+                  <span class="hotels-rating">Рейтинг: 8,5</span>
                 </li>
-                <li class="index-hotels-item">
+                <li class="hotels-item">
                     <img src="img/villas_at_poco.jpg" alt="Небольшой лес, вдали видна радуга на фоне скалистых гор.">
-                    <h3 class="index-hotels-title">Villas at Poco Diablo</h3>
-                    <p class="index-hotels-type">Гостиница</p>
-                    <span class="index-hotels-price">От 5000 ₽</span>
+                    <h3 class="hotels-title">Villas at Poco Diablo</h3>
+                    <p class="hotels-type">Гостиница</p>
+                    <span class="hotels-price">От 5000 ₽</span>
                     <a href="#">Подробнее</a>
-                    <input class="button-blue index-hotels-button" type="button" value="В избранное">
-                    <span class="index-hotels-rating">Рейтинг: 9,2</span>
+                    <input class="button-blue hotels-button" type="button" value="В избранное">
+                    <span class="hotels-rating">Рейтинг: 9,2</span>
                 </li>
-                <li class="index-hotels-item">
+                <li class="hotels-item">
                     <img src="img/desert_quail.jpg" alt="Пустынная местность с деревьями и горами.">
-                    <h3 class="index-hotels-title">Desert Quail Inn</h3>
-                    <p class="index-hotels-type">Гостиница</p>
-                    <span class="index-hotels-price">От 2500 ₽</span>
+                    <h3 class="hotels-title">Desert Quail Inn</h3>
+                    <p class="hotels-type">Гостиница</p>
+                    <span class="hotels-price">От 2500 ₽</span>
                     <a href="#">Подробнее</a>
-                    <input class="button-blue index-hotels-button" type="button" value="В избранное">
-                    <span class="index-hotels-rating">Рейтинг: 6,9</span>
+                    <input class="button-blue hotels-button" type="button" value="В избранное">
+                    <span class="hotels-rating">Рейтинг: 6,9</span>
                 </li>
-                <li class="index-hotels-item">
+                <li class="hotels-item">
                     <img src="img/green_tree.jpg" alt="Плато на фоне темного звездного неба">
-                    <h3 class="index-hotels-title">GreenTree Inn</h3>
-                    <p class="index-hotels-type">Гостиница</p>
-                    <span class="index-hotels-price">От 1500 ₽</span>
+                    <h3 class="hotels-title">GreenTree Inn</h3>
+                    <p class="hotels-type">Гостиница</p>
+                    <span class="hotels-price">От 1500 ₽</span>
                     <a href="#">Подробнее</a>
-                    <input class="button-blue index-hotels-button" type="button" value="В избранное">
-                    <span class="index-hotels-rating">Рейтинг: 5,0</span>
+                    <input class="button-blue hotels-button" type="button" value="В избранное">
+                    <span class="hotels-rating">Рейтинг: 5,0</span>
                 </li>
             </ul>
 
