--- a/catalog.html
+++ b/catalog.html
@@ -111,15 +111,15 @@
 
             <ul class="index-icons-list">
                 <li class="index-icons-item">
-                    <button class="index-icons-btn">tile</button>
+                    <button class="index-icons-btn" type="button">tile</button>
                     <span class="visually-hidden">Отображение плиткой</span>
                 </li>
                 <li class="index-icons-item">
-                    <button class="index-icons-btn">large-icons</button>
+                    <button class="index-icons-btn" type="button">large-icons</button>
                     <span class="visually-hidden">Отображение крупные значки</span>
                 </li>
                 <li class="index-icons-item">
-                    <button class="index-icons-btn">list</button>
+                    <button class="index-icons-btn" type="button">list</button>
                     <span class="visually-hidden">Отображение списком</span>
                 </li>
             </ul>
