Исправляет input на button

--- a/catalog.html
+++ b/catalog.html
@@ -131,7 +131,7 @@
                   <p class="hotels-type">Гостиница</p>
                   <span class="hotels-price">От 4000 ₽</span>
                   <a href="#">Подробнее</a>
-                  <input class="button-blue hotels-button" type="button" value="В избранное">
+                  <button class="button-blue hotels-button" type="button">В избранное</button>
                   <span class="hotels-rating">Рейтинг: 8,5</span>
                 </li>
                 <li class="hotels-item">
@@ -140,7 +140,7 @@
                     <p class="hotels-type">Гостиница</p>
                     <span class="hotels-price">От 5000 ₽</span>
                     <a href="#">Подробнее</a>
-                    <input class="button-blue hotels-button" type="button" value="В избранное">
+                    <button class="button-blue hotels-button" type="button">В избранное</button>
                     <span class="hotels-rating">Рейтинг: 9,2</span>
                 </li>
                 <li class="hotels-item">
@@ -149,7 +149,7 @@
                     <p class="hotels-type">Гостиница</p>
                     <span class="hotels-price">От 2500 ₽</span>
                     <a href="#">Подробнее</a>
-                    <input class="button-blue hotels-button" type="button" value="В избранное">
+                    <button class="button-blue hotels-button" type="button">В избранное</button>
                     <span class="hotels-rating">Рейтинг: 6,9</span>
                 </li>
                 <li class="hotels-item">
@@ -158,7 +158,7 @@
                     <p class="hotels-type">Гостиница</p>
                     <span class="hotels-price">От 1500 ₽</span>
                     <a href="#">Подробнее</a>
-                    <input class="button-blue hotels-button" type="button" value="В избранное">
+                    <button class="button-blue hotels-button" type="button">В избранное</button>
                     <span class="hotels-rating">Рейтинг: 5,0</span>
                 </li>
             </ul>
