Убирает лишние элементы списка

--- a/catalog.html
+++ b/catalog.html
@@ -168,11 +168,7 @@
                 <li class="pagination-list"><a class="pagination-link" href="#">2</a></li>
                 <li class="pagination-list"><a class="pagination-link" href="#">3</a></li>
                 <li class="pagination-list"><a class="pagination-link" href="#">4</a></li>
-                <li class="pagination-list"><a class="pagination-link" href="#">5</a></li>
-                <li class="pagination-list"><a class="pagination-link" href="#">6</a></li>
-                <li class="pagination-list"><a class="pagination-link" href="#">7</a></li>
-                <li class="pagination-list"><a class="pagination-link" href="#">8</a></li>
-                <li class="pagination-list"><a class="pagination-link" href="#">9</a></li>
+                <li class="pagination-list"><a class="pagination-link" href="#">...</a></li>
                 <li class="pagination-list"><a class="pagination-link" href="#">10</a></li>
             </ul>
 
