--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="page-header">
 
         <a href="index.html" class="logo">
-            <img src="img/logo.svg" alt="Логотип сайта Седона">
+            <img src="images/logo.svg" width="140" height="70" alt="Логотип сайта Седона">
         </a>
 
         <nav class="navigation">
@@ -143,6 +143,7 @@
       <section class="footer-author">
         <h2 class="visually-hidden">Сайт htmlacademy</h2>
         <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+          <img src="images/html-academy-logo.png" alt="Адрес сайта Html Academy">
         <span class="visually-hidden">.htmlacademy</span>
         </a>
       </section>
