Исправляет формат изображения

--- a/catalog.html
+++ b/catalog.html
@@ -215,7 +215,7 @@
       <section class="footer-author">
         <h2 class="visually-hidden">Сайт htmlacademy</h2>
         <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-          <img src="images/html-academy-logo.png" alt="Адрес сайта Html Academy">
+          <img src="images/html-academy-logo.svg" alt="Адрес сайта Html Academy">
         <span class="visually-hidden">.htmlacademy</span>
         </a>
       </section>
