--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>HTML Academy: Седона</title>
-
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
 
 <body>
@@ -52,7 +52,7 @@
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
-            <li class="advantages-item">
+            <li class="advantages-item white-text">
                 <h3 class="advantages-title">Настоящий городок</h3>
                 <p class="advatages-description">№1 Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
@@ -74,7 +74,7 @@
             <li class="advantages-item">
 
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item white-text">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advatages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
@@ -103,7 +103,7 @@
       </section>
 
       <section class="subscription">
-        <h2 class="subscripyion-title">Подпишитесь на рассылку</h2>
+        <h2 class="subscription-title">Подпишитесь на рассылку</h2>
         <p class="subscription-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
             <label for="newsletter-email">Email</label>
@@ -115,20 +115,20 @@
 
     <footer class="page-footer">
       <section class="footer-socials">
-        <h2 class="visually-hidden">Давай дружить</h2>
+        <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-socials-list">
             <li class="footer-socials-item">
-                <a href="https://vk.com/htmlacademy" class="button">
+                <a href="https://vk.com/htmlacademy" class="button-vk">
                 <span class="visually-hidden">Вконтакте</span>
                 </a>
             </li>
             <li class="footer-socials-item">
-                <a href="https://t.me/htmlacademy " class="button">
+                <a href="https://t.me/htmlacademy " class="button-telegram">
                 <span class="visually-hidden">Телеграм</span>
                 </a>
             </li>
             <li class="footer-socials-item">
-                <a href="https://www.youtube.com/user/htmlacademyru" class="button">
+                <a href="https://www.youtube.com/user/htmlacademyru" class="button-youtube">
                 <span class="visually-hidden">Ютуб</span>
                 </a>
             </li>
