Исправляет стили и декор картинки

--- a/catalog.html
+++ b/catalog.html
@@ -185,9 +185,9 @@
                 </li>
             </ul>
 
-            <section class="subscription">
-                <h2 class="subscripyion-title">Подпишитесь на рассылку</h2>
-                <p class="subscription-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+            <section class="subscription catalog">
+                <h2 class="subscription-title black-text">Подпишитесь на рассылку</h2>
+                <p class="subscription-description black-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
                 <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
                     <label for="newsletter-email">Email</label>
                     <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email"
