--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
 
 
     <main class="main-index">
+      <div class="hero">
+        <img class="hero-background-welcome" src="images/welcome.svg" width="" alt="Добро пожаловать">
+        <img class="hero-background-gorgeous" src="images/to-the-gorgeous.svg" alt="Добро пожаловать">
+        <img class="hero-background-sedona" src="images/sedona-title.svg" alt="Седона. Потому что Гранд-Каньон ацтой">
+      </div>
        <section class="description">
-        <img src="#" alt="Добро пожаловать">
-        <img src="#" alt="Седона. Потому что Гранд-Каньон ацтой">
         <h1 class="description-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
         <p class="description-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
@@ -57,7 +60,7 @@
                 <p class="advatages-description">№1 Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
             <li class="advantages-item">
-
+              <div class="advantages-image1"></div>
             </li>
             <li class="advantages-item">
                 <h3 class="advantages-title">Небольшая площадь</h3>
@@ -72,7 +75,7 @@
                 <p class="advatages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages-item">
-
+              <div class="advantages-image2"></div>
             </li>
             <li class="advantages-item white-text">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
