--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <h3 class="advantages-title">Небольшая площадь</h3>
                 <p class="advatages-description">Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="advantages-item">
-                <h3 class="advantages-title">Красивая дорого</h3>
+            <li class="advantages-item color-change">
+                <h3 class="advantages-title">Красивая дорога</h3>
                 <p class="advatages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="advantages-item">
