Исправляет название классов и изменяет контент изображение на декор.

--- a/catalog.html
+++ b/catalog.html
@@ -40,9 +40,9 @@
     </header>
 
 
-    <main class="inner-index">
-        <section class="inner-index-catalog">
-            <h1 class="inner-index-catalog-title">Гостинницы Седоны</h1>
+    <main class="inner">
+        <section class="inner-catalog">
+            <h1 class="inner-catalog-title">Гостинницы Седоны</h1>
             <ul class="breadcrumbs-list">
                 <li class="breadcrumbs-item">
                     <a class="breadcrumbs-link" href="index.html">
@@ -164,7 +164,7 @@
                 </li>
             </ul>
 
-            <ul class="pagination">
+            <ul class="pagination-list">
                 <li class="pagination-item">
                   <a class="pagination-link" href="#">1</a>
                 </li>
