--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
         </nav>
     </header>
 
-
     <main class="main-index">
       <div class="hero">
-        <img class="hero-background-welcome" src="images/welcome.svg" width="" alt="Добро пожаловать">
+        <div class="hero-background-welcome"></div>
         <img class="hero-background-gorgeous" src="images/to-the-gorgeous.svg" alt="Добро пожаловать">
         <img class="hero-background-sedona" src="images/sedona-title.svg" alt="Седона. Потому что Гранд-Каньон ацтой">
       </div>
