Добавляет подпись к декоративным картинкам

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
                 <p class="advatages-description">№1 Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
             <li class="advantages-item">
-              <div class="advantages-image1"></div>
+              <div class="advantages-image1">
+                <span class="visually-hidden">
+                  <img src="#" alt="Двухэтажный котеджный домик под названием 'Open Range' на фоне гор.">
+                </span>
+              </div>
             </li>
             <li class="advantages-item">
                 <h3 class="advantages-title">Небольшая площадь</h3>
@@ -74,7 +78,11 @@
                 <p class="advatages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages-item">
-              <div class="advantages-image2"></div>
+              <div class="advantages-image2">
+                <span class="visually-hidden">
+                  <img src="#" alt="Прекрасный вид на каньон. Внутри которого находятся зеленые деревья.">
+                </span>
+              </div>
             </li>
             <li class="advantages-item white-text">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
